Add the command to return loans